removed_test_dataset

--- a/1. Data Collection.ipynb
+++ b/1. Data Collection.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,45 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting data from subreddit Ripple after 30 days\n",
-      "Getting data from subreddit Ripple after 60 days\n",
-      "Getting data from subreddit Ripple after 90 days\n",
-      "Getting data from subreddit Ripple after 120 days\n",
-      "Getting data from subreddit Ripple after 150 days\n",
-      "Query Complete!\n"
-     ]
-    }
-   ],
-   "source": [
-    "ripple_df = query_pushshift('Ripple')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2405, 9)\n"
+      "(2471, 9)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1679, 9)"
+       "(1674, 9)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,36 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(646, 9)"
+       "(4145, 9)"
       ]
      },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ripple_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4084, 9)"
-      ]
-     },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -278,27 +236,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>🏦Remitano is Rewarding Every Delayed Transacti...</td>\n",
-       "      <td>Starting from ⏱February 10, 2020, Remitano wil...</td>\n",
+       "      <td>With all this stimulus- why is bitcoin acting ...</td>\n",
+       "      <td></td>\n",
        "      <td>Bitcoin</td>\n",
-       "      <td>1585025915</td>\n",
-       "      <td>remimay</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1585371522</td>\n",
+       "      <td>Somebodykilledmybro</td>\n",
+       "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>True</td>\n",
-       "      <td>2020-03-23</td>\n",
+       "      <td>2020-03-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Veteran Trader: Bitcoin Should be Viewed as “C...</td>\n",
-       "      <td>[removed]</td>\n",
+       "      <td>Abra Wallet</td>\n",
+       "      <td>Is abra wallet a good place to store bitcoin i...</td>\n",
        "      <td>Bitcoin</td>\n",
-       "      <td>1585026571</td>\n",
-       "      <td>ProfessionalUnit4</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1585373310</td>\n",
+       "      <td>JayR111</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>True</td>\n",
-       "      <td>2020-03-23</td>\n",
+       "      <td>2020-03-27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -306,19 +264,19 @@
       ],
       "text/plain": [
        "                                               title  \\\n",
-       "0  🏦Remitano is Rewarding Every Delayed Transacti...   \n",
-       "1  Veteran Trader: Bitcoin Should be Viewed as “C...   \n",
+       "0  With all this stimulus- why is bitcoin acting ...   \n",
+       "1                                        Abra Wallet   \n",
        "\n",
        "                                            selftext subreddit  created_utc  \\\n",
-       "0  Starting from ⏱February 10, 2020, Remitano wil...   Bitcoin   1585025915   \n",
-       "1                                          [removed]   Bitcoin   1585026571   \n",
+       "0                                                      Bitcoin   1585371522   \n",
+       "1  Is abra wallet a good place to store bitcoin i...   Bitcoin   1585373310   \n",
        "\n",
-       "              author  num_comments  score  is_self   timestamp  \n",
-       "0            remimay             0      1     True  2020-03-23  \n",
-       "1  ProfessionalUnit4             8      1     True  2020-03-23  "
+       "                author  num_comments  score  is_self   timestamp  \n",
+       "0  Somebodykilledmybro             6      1     True  2020-03-27  \n",
+       "1              JayR111             4      1     True  2020-03-27  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The Bitcoin Seminars that were previously going to be held in March, 2020 are postponed to June 2020 due to the COVID-19 Crisis. But the event is still on.\\n\\n# [Crowdfunding link to make this event a huge success.](https://tallyco.in/s/7zhcb1/)\\n\\n**Some Details:** \\n\\nCryptocurrency ban has been lifted in India &amp; buying, selling &amp; holding is completely Legalized. We are organizing Bitcoin Seminars across the best Tech institutes in India.\\n\\nIndia is #2 most populated country in the world and Bitcoin has already faced a hard time staying in people's radar here. We are a team of 27 Tech-savvy individuals who are planning several seminars on Bitcoin &amp; Blockchain technology across the Engineering &amp; Technology Colleges in India. The seminars will be held starting June 25, 2020.\\n\\nWe are in need of funds to cover our Travel, food, lodging expenses as well as Books, pamphlets, brochures printing material. So any kind donation would be greatly appreciated.\\n\\n**The colleges covered are:**\\n\\n* IIT, Bombay\\n* IIT, Delhi Birla\\n* Institute of Technology &amp; Science\\n* (BITS) Pilani\\n* NIT, Karnataka\\n* Manipal Institue of Technology\\n* Symbiosis Institute Of Technology\\n* NITTE Meenakshi Institute Of Technology\\n* Francis Xavier Engineering College\\n* CMR College of Engineering &amp; Technology\\n* BRACT'S Vishwakarma Institute of Information Technology\\n* Tula's Institute Engineering &amp; Management College\\n\\nWe have obtained permissions from all the above colleges &amp; they're willing to let us teach all the students about the Technology behind Bitcoin, Blockchain, it's benefits etc.\\n\\nPlease help us in anyway you can. &lt;3\""
+       "'&amp;#x200B;\\n\\nhttps://preview.redd.it/6dr71yvvncp41.jpg?width=1410&amp;format=pjpg&amp;auto=webp&amp;s=c3eab9d646265c291355d280e18368f105053e45'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,16 +316,14 @@
      "text": [
       "Stored 'ethereum_df' (DataFrame)\n",
       "Stored 'bitcoin_df' (DataFrame)\n",
-      "Stored 'combined' (DataFrame)\n",
-      "Stored 'ripple_df' (DataFrame)\n"
+      "Stored 'combined' (DataFrame)\n"
      ]
     }
    ],
    "source": [
     "%store ethereum_df\n",
     "%store bitcoin_df\n",
-    "%store combined\n",
-    "%store ripple_df"
+    "%store combined"
    ]
   },
   {
