--- a/3. Feature engineering.ipynb
+++ b/3. Feature engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store -r combined\n",
-    "%store -r ripple_df"
+    "%store -r combined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,23 +57,20 @@
        "      <th>title</th>\n",
        "      <th>selftext</th>\n",
        "      <th>subreddit</th>\n",
-       "      <th>title_selftext</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>🏦Remitano is Rewarding Every Delayed Transacti...</td>\n",
-       "      <td>Starting from ⏱February 10, 2020, Remitano wil...</td>\n",
+       "      <td>With all this stimulus- why is bitcoin acting ...</td>\n",
+       "      <td></td>\n",
        "      <td>1</td>\n",
-       "      <td>🏦Remitano is Rewarding Every Delayed Transacti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Veteran Trader: Bitcoin Should be Viewed as “C...</td>\n",
-       "      <td>[removed]</td>\n",
+       "      <td>Abra Wallet</td>\n",
+       "      <td>Is abra wallet a good place to store bitcoin i...</td>\n",
        "      <td>1</td>\n",
-       "      <td>Veteran Trader: Bitcoin Should be Viewed as “C...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -82,19 +78,15 @@
       ],
       "text/plain": [
        "                                               title  \\\n",
-       "0  🏦Remitano is Rewarding Every Delayed Transacti...   \n",
-       "1  Veteran Trader: Bitcoin Should be Viewed as “C...   \n",
+       "0  With all this stimulus- why is bitcoin acting ...   \n",
+       "1                                        Abra Wallet   \n",
        "\n",
-       "                                            selftext  subreddit  \\\n",
-       "0  Starting from ⏱February 10, 2020, Remitano wil...          1   \n",
-       "1                                          [removed]          1   \n",
-       "\n",
-       "                                      title_selftext  \n",
-       "0  🏦Remitano is Rewarding Every Delayed Transacti...  \n",
-       "1  Veteran Trader: Bitcoin Should be Viewed as “C...  "
+       "                                            selftext  subreddit  \n",
+       "0                                                             1  \n",
+       "1  Is abra wallet a good place to store bitcoin i...          1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,31 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined['title_selftext'] = combined['title'] + ' ' + combined['selftext']\n",
-    "ripple_df['title_selftext'] = ripple_df['title'] + ' ' + ripple_df['selftext']"
+    "combined['title_selftext'] = combined['title'] + ' ' + combined['selftext']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stored 'combined' (DataFrame)\n",
-      "Stored 'ripple_df' (DataFrame)\n"
+      "Stored 'combined' (DataFrame)\n"
      ]
     }
    ],
    "source": [
-    "%store combined\n",
-    "%store ripple_df"
+    "%store combined\n"
    ]
   },
   {
