changes have been made on the modeling part

--- a/1. Data Collection.ipynb
+++ b/1. Data Collection.ipynb
@@ -66,9 +66,9 @@
    "outputs": [],
    "source": [
     "def query_pushshift(subreddit, kind = 'submission', day_window = 30, n = 5):\n",
-    "    SUBFIELDS = ['title', 'selftext', 'subreddit', 'created_utc', 'author', 'num_comments', 'score', 'is_self']\n",
     "    # BASE_URL & Parameters\n",
-    "    BASE_URL = f\"https://api.pushshift.io/reddit/search/{kind}\" # also known as the \"API endpoint\" \n",
+    "    # also known as the \"API endpoint\" \n",
+    "    BASE_URL = f\"https://api.pushshift.io/reddit/search/{kind}\" \n",
     "    size = 1000\n",
     "    #day_window = 1\n",
     "    # instantiate empty list for temp storage\n",
